; ModuleID = '/home/carl/AnghaBench/linux/net/nfc/hci/extr_command.c_nfc_hci_send_cmd_async.c'
source_filename = "/home/carl/AnghaBench/linux/net/nfc/hci/extr_command.c_nfc_hci_send_cmd_async.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nfc_hci_dev = type { i64* }

@.str = private unnamed_addr constant [2 x i8] c"\0A\00", align 1
@NFC_HCI_INVALID_PIPE = common dso_local global i64 0, align 8
@EADDRNOTAVAIL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nfc_hci_send_cmd_async(%struct.nfc_hci_dev* %0, i64 %1, i64 %2, i64* %3, i64 %4, i32 %5, i8* %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca %struct.nfc_hci_dev*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  %12 = alloca i64*, align 8
  %13 = alloca i64, align 8
  %14 = alloca i32, align 4
  %15 = alloca i8*, align 8
  %16 = alloca i64, align 8
  store %struct.nfc_hci_dev* %0, %struct.nfc_hci_dev** %9, align 8
  store i64 %1, i64* %10, align 8
  store i64 %2, i64* %11, align 8
  store i64* %3, i64** %12, align 8
  store i64 %4, i64* %13, align 8
  store i32 %5, i32* %14, align 4
  store i8* %6, i8** %15, align 8
  %17 = call i32 @pr_debug(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  %18 = load %struct.nfc_hci_dev*, %struct.nfc_hci_dev** %9, align 8
  %19 = getelementptr inbounds %struct.nfc_hci_dev, %struct.nfc_hci_dev* %18, i32 0, i32 0
  %20 = load i64*, i64** %19, align 8
  %21 = load i64, i64* %10, align 8
  %22 = getelementptr inbounds i64, i64* %20, i64 %21
  %23 = load i64, i64* %22, align 8
  store i64 %23, i64* %16, align 8
  %24 = load i64, i64* %16, align 8
  %25 = load i64, i64* @NFC_HCI_INVALID_PIPE, align 8
  %26 = icmp eq i64 %24, %25
  br i1 %26, label %27, label %30

27:                                               ; preds = %7
  %28 = load i32, i32* @EADDRNOTAVAIL, align 4
  %29 = sub nsw i32 0, %28
  store i32 %29, i32* %8, align 4
  br label %39

30:                                               ; preds = %7
  %31 = load %struct.nfc_hci_dev*, %struct.nfc_hci_dev** %9, align 8
  %32 = load i64, i64* %16, align 8
  %33 = load i64, i64* %11, align 8
  %34 = load i64*, i64** %12, align 8
  %35 = load i64, i64* %13, align 8
  %36 = load i32, i32* %14, align 4
  %37 = load i8*, i8** %15, align 8
  %38 = call i32 @nfc_hci_execute_cmd_async(%struct.nfc_hci_dev* %31, i64 %32, i64 %33, i64* %34, i64 %35, i32 %36, i8* %37)
  store i32 %38, i32* %8, align 4
  br label %39

39:                                               ; preds = %30, %27
  %40 = load i32, i32* %8, align 4
  ret i32 %40
}

declare dso_local i32 @pr_debug(i8*) #1

declare dso_local i32 @nfc_hci_execute_cmd_async(%struct.nfc_hci_dev*, i64, i64, i64*, i64, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
